<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_scoring"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="me.chrislane.snookerscore.Scoring">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/foul"
            android:layout_marginTop="18dp"
            android:layout_toStartOf="@+id/arrow"
            android:id="@+id/player_one_name"
            android:textSize="24sp"
            android:onClick="changePlayer"
            android:textColor="?android:attr/textColorPrimary"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:id="@+id/player_one_score"
            android:layout_below="@+id/player_one_name"
            android:layout_alignStart="@+id/player_one_name"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:onClick="changePlayer"
            android:textColor="?android:attr/textColorPrimary"/>

    <ImageButton
            android:contentDescription="@string/green_ball_description"
            android:visibility="invisible"
            android:onClick="onClickBall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/green_ball"
            android:id="@+id/green_ball"
            android:layout_alignTop="@+id/yellow_ball"
            android:layout_alignStart="@+id/red_ball"/>

    <ImageButton
            android:contentDescription="@string/brown_ball_description"
            android:visibility="invisible"
            android:onClick="onClickBall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/brown_ball"
            android:id="@+id/brown_ball"
            android:layout_alignTop="@+id/green_ball"
            android:layout_alignParentEnd="true"/>

    <ImageButton
            android:contentDescription="@string/pink_ball_description"
            android:visibility="invisible"
            android:onClick="onClickBall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/pink_ball"
            android:id="@+id/pink_ball"
            android:layout_alignTop="@+id/blue_ball"
            android:layout_alignStart="@+id/green_ball"/>

    <ImageButton
            android:contentDescription="@string/black_ball_description"
            android:visibility="invisible"
            android:onClick="onClickBall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/black_ball"
            android:id="@+id/black_ball"
            android:layout_alignTop="@+id/pink_ball"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_two_score"
            android:layout_alignBaseline="@+id/player_one_score"
            android:layout_alignBottom="@+id/player_one_score"
            android:layout_alignEnd="@+id/player_two_name"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:onClick="changePlayer"
            android:textColor="?android:attr/textColorPrimary"
            android:textAlignment="textEnd"/>

    <ImageButton
            android:contentDescription="@string/arrow_description"
            android:rotation="-90"
            android:onClick="changePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow_up"
            android:background="@android:color/transparent"
            android:layout_alignTop="@+id/player_one_name"
            android:layout_centerHorizontal="true"
            android:id="@+id/arrow"/>

    <ImageButton
            android:contentDescription="@string/blue_ball_description"
            android:visibility="invisible"
            android:onClick="onClickBall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/blue_ball"
            android:id="@+id/blue_ball"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

    <ImageButton
            android:contentDescription="@string/yellow_ball_description"
            android:visibility="invisible"
            android:onClick="onClickBall"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/yellow_ball"
            android:id="@+id/yellow_ball"
            android:layout_marginBottom="18dp"
            android:layout_above="@+id/blue_ball"
            android:layout_alignParentStart="true"/>

    <ImageButton
            android:onClick="onClickBall"
            android:contentDescription="@string/red_ball_description"
            android:layout_width="65dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/red_ball"
            android:id="@+id/red_ball"
            android:background="@android:color/transparent"
            android:layout_marginBottom="18dp"
            android:layout_above="@+id/green_ball"
            android:layout_centerHorizontal="true"/>

    <Button
            android:text="Foul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFoul"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:id="@+id/foul"
            android:layout_below="@+id/player_one_score"
            android:layout_alignParentStart="true"/>

    <Button
            android:text="End Frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/foul"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:background="@drawable/rounded_button"
            android:onClick="onClickEndFrame"
            android:id="@+id/end_frame"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_two_name"
            android:textSize="24sp"
            android:onClick="changePlayer"
            android:textColor="?android:attr/textColorPrimary"
            android:textAlignment="textEnd"
            android:layout_alignTop="@+id/arrow"
            android:layout_alignEnd="@+id/end_frame"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remaining_red_balls"
            android:layout_marginTop="20dp"
            android:textStyle="normal|bold"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:layout_alignTop="@+id/red_ball"
            android:onClick="onClickBall"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>
