<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_setup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="me.chrislane.snookerscore.Setup">

    <TextView
            android:labelFor="@+id/name_two_entry"
            android:text="@string/player_two_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:id="@+id/player_twos_name"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_above="@+id/name_two_entry"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_one_entry"
            android:layout_marginBottom="25dp"
            android:layout_above="@+id/player_twos_name"
            android:layout_alignStart="@+id/name_two_entry"/>

    <TextView
            android:labelFor="@+id/name_one_entry"
            android:text="@string/player_one_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_ones_name"
            android:layout_marginBottom="17dp"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_above="@+id/name_one_entry"
            android:layout_alignStart="@+id/player_twos_name"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_two_entry"
            android:layout_marginBottom="68dp"
            android:layout_alignBottom="@+id/continue_button"
            android:layout_centerHorizontal="true"/>

    <Button
            android:text="@string/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewFrame"
            android:padding="10dp"
            android:background="@drawable/rounded_button"
            android:id="@+id/continue_button"
            android:layout_marginBottom="64dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>
